After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 757938 - glcolorconvert fails on OSX
glcolorconvert fails on OSX
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Mac OS
: Normal normal
: 1.7.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-11-11 11:01 UTC by Heinrich Fink
Modified: 2015-11-11 12:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Log of crash (4.49 KB, application/x-xz)
2015-11-11 11:01 UTC, Heinrich Fink
Details

Description Heinrich Fink 2015-11-11 11:01:10 UTC
Created attachment 315248 [details]
Log of crash

Using gst-play-1.0 on OSX, I get the following error:

0:00:00.205942000 51423 0x7fbd860585e0 ERROR              glslstage gstglslstage.c:467:_compile_shader:<glslstage1> fragment shader compilation failed:ERROR: 0:45: Use of undeclared identifier 'gl_FragColor'

This can be reproduced by playing the file using gst-play-1.0 available at https://www.dropbox.com/s/3x199rdah1x4ohg/claudia_aac.mov?dl=1

Attached is a debug log of gl*:6 playing that file.
Comment 1 Matthew Waters (ystreet00) 2015-11-11 12:46:21 UTC
Thanks!

Note I couldn't actually reproduce this on my Intel hardware and switching to my nvidia card is a hassle so this is actually untested but it should work ;)

commit aada44cc091f8442821523499fc74df555ac361d
Author: Matthew Waters <matthew@centricular.com>
Date:   Wed Nov 11 23:39:35 2015 +1100

    glcolorconvert: mangle gl_FragColor for GL3
    
    Some drivers don't provide the compatibility definition and we need to provide
    our own 'out vec4' variable to put the results of the fragment shader into.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=757938
Comment 2 Heinrich Fink 2015-11-11 12:53:35 UTC
Thanks, that fixes it for me :)